<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/text_white_banner"
    android:orientation="vertical"
    tools:context="com.example.android.quizappbikes.TestActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/question1"
                style="@style/question_style" />

            <RadioGroup
                android:id="@+id/q1Group"
                style="@style/radio_group_style">

                <RadioButton
                    android:id="@+id/q1a1"
                    style="@style/radio_button_style"
                    android:text="@string/q1a2" />

                <RadioButton
                    android:id="@+id/q1a2"
                    style="@style/radio_button_style"
                    android:text="@string/q1a1" />

                <RadioButton
                    android:id="@+id/q1a3"
                    style="@style/radio_button_style"
                    android:text="@string/q1a3" />
            </RadioGroup>

            <TextView
                android:id="@+id/question2"
                style="@style/question_style"
                android:text="@string/q2" />

            <RadioGroup
                android:id="@+id/q2Group"
                style="@style/radio_group_style">

                <RadioButton
                    android:id="@+id/q2a1"
                    style="@style/radio_button_style"
                    android:text="@string/q2a1" />

                <RadioButton
                    android:id="@+id/q2a2"
                    style="@style/radio_button_style"
                    android:text="@string/q2a2" />

                <RadioButton
                    android:id="@+id/q2a3"
                    style="@style/radio_button_style"
                    android:text="@string/q2a3" />
            </RadioGroup>

            <TextView
                android:id="@+id/question3"
                style="@style/question_style"
                android:text="@string/q3" />

            <RadioGroup
                android:id="@+id/q3Group"
                style="@style/radio_group_style">

                <RadioButton
                    android:id="@+id/q3a1"
                    style="@style/radio_button_style"
                    android:text="@string/q3a1" />

                <RadioButton
                    android:id="@+id/q3a2"
                    style="@style/radio_button_style"
                    android:text="@string/q3a2" />

                <RadioButton
                    android:id="@+id/q3a3"
                    style="@style/radio_button_style"
                    android:text="@string/q3a3" />
            </RadioGroup>

            <TextView
                android:id="@+id/question4"
                style="@style/question_style"
                android:text="@string/q4" />

            <RadioGroup
                android:id="@+id/q4Group"
                style="@style/radio_group_style">

                <RadioButton
                    android:id="@+id/q4a1"
                    style="@style/radio_button_style"
                    android:text="@string/q4a1" />

                <RadioButton
                    android:id="@+id/q4a2"
                    style="@style/radio_button_style"
                    android:text="@string/q4a2" />

                <RadioButton
                    android:id="@+id/q4a3"
                    style="@style/radio_button_style"
                    android:text="@string/q4a3" />
            </RadioGroup>

            <TextView
                android:id="@+id/question5"
                style="@style/question_style"
                android:text="@string/q5" />

            <RadioGroup
                android:id="@+id/q5Group"
                style="@style/radio_group_style">

                <RadioButton
                    android:id="@+id/q5a1"
                    style="@style/radio_button_style"
                    android:text="@string/q5a1" />

                <RadioButton
                    android:id="@+id/q5a2"
                    style="@style/radio_button_style"
                    android:text="@string/q5a2" />

                <RadioButton
                    android:id="@+id/q5a3"
                    style="@style/radio_button_style"
                    android:text="@string/q5a3" />
            </RadioGroup>

            <TextView
                android:id="@+id/question6"
                style="@style/question_style"
                android:text="@string/q6" />

            <RadioGroup
                android:id="@+id/q6Group"
                style="@style/radio_group_style">

                <RadioButton
                    android:id="@+id/q6a1"
                    style="@style/radio_button_style"
                    android:text="@string/q6a1" />

                <RadioButton
                    android:id="@+id/q6a2"
                    style="@style/radio_button_style"
                    android:text="@string/q6a2" />

                <RadioButton
                    android:id="@+id/q6a3"
                    style="@style/radio_button_style"
                    android:text="@string/q6a3" />
            </RadioGroup>

            <TextView
                android:id="@+id/question7"
                style="@style/question_style"
                android:text="@string/q7" />

            <RadioGroup
                android:id="@+id/q7Group"
                style="@style/radio_group_style">

                <RadioButton
                    android:id="@+id/q7a1"
                    style="@style/radio_button_style"
                    android:text="@string/q7a1" />

                <RadioButton
                    android:id="@+id/q7a2"
                    style="@style/radio_button_style"
                    android:text="@string/q7a2" />

                <RadioButton
                    android:id="@+id/q7a3"
                    style="@style/radio_button_style"
                    android:text="@string/q7a3" />
            </RadioGroup>

            <TextView
                android:id="@+id/question8"
                style="@style/question_style"
                android:text="@string/q8" />

            <RadioGroup
                android:id="@+id/q8Group"
                style="@style/radio_group_style">

                <RadioButton
                    android:id="@+id/q8a1"
                    style="@style/radio_button_style"
                    android:text="@string/q8a1" />

                <RadioButton
                    android:id="@+id/q8a2"
                    style="@style/radio_button_style"
                    android:text="@string/q8a2" />

                <RadioButton
                    android:id="@+id/q8a3"
                    style="@style/radio_button_style"
                    android:text="@string/q8a3" />
            </RadioGroup>

            <TextView
                android:id="@+id/question9"
                style="@style/question_style"
                android:text="@string/q9" />

            <RadioGroup
                android:id="@+id/q9Group"
                style="@style/radio_group_style">

                <RadioButton
                    android:id="@+id/q9a1"
                    style="@style/radio_button_style"
                    android:text="@string/q9a1" />

                <RadioButton
                    android:id="@+id/q9a2"
                    style="@style/radio_button_style"
                    android:text="@string/q9a2" />

                <RadioButton
                    android:id="@+id/q9a3"
                    style="@style/radio_button_style"
                    android:text="@string/q9a3" />
            </RadioGroup>

            <TextView
                android:id="@+id/question10"
                style="@style/question_style"
                android:text="@string/q10" />

            <CheckBox
                android:id="@+id/q10a1"
                style="@style/check_box_style"
                android:layout_marginTop="@dimen/margin_bottom"
                android:text="@string/q10a1" />

            <CheckBox
                android:id="@+id/q10a2"
                style="@style/check_box_style"
                android:text="@string/q10a2" />

            <CheckBox
                android:id="@+id/q10a3"
                style="@style/check_box_style"
                android:text="@string/q10a3" />

            <CheckBox
                android:id="@+id/q10a4"
                style="@style/check_box_style"
                android:text="@string/q10a4" />

            <CheckBox
                android:id="@+id/q10a5"
                style="@style/check_box_style"
                android:text="@string/q10a5" />

            <EditText
                android:id="@+id/name_user"
                style="@style/edit_text_description_style"
                android:layout_gravity="center_vertical"
                tools:text="Andrew" />

            <Button
                android:id="@+id/btn_result"
                style="@style/submit_button_style"
                android:onClick="getResult" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
