<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.quizappbikes.Test">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/usersName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                android:text="@string/name"
                android:textAllCaps="false"
                android:textSize="26dp" />

            <TextView
                android:id="@+id/question1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryLight"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                android:text="@string/q1"
                android:textAllCaps="false"
                android:textSize="16dp" />

            <RadioGroup
                android:id="@+id/q1radiobox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:baselineAligned="false">

                <RadioButton
                    android:id="@+id/q1a1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q1a2"
                    android:textSize="16dp" />

                <RadioButton
                    android:id="@+id/q1a2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q1a1"
                    android:textSize="16dp" />

                <RadioButton
                    android:id="@+id/q1a3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q1a3"
                    android:textSize="16dp" />
            </RadioGroup>


            <TextView
                android:id="@+id/question2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryLight"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                android:text="@string/q2"
                android:textAllCaps="false"
                android:textSize="16dp" />

            <RadioGroup
                android:id="@+id/q2radiobox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <RadioButton
                    android:id="@+id/q2a1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q2a1"
                    android:textSize="16dp" />

                <RadioButton
                    android:id="@+id/q2a2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q2a2"
                    android:textSize="16dp" />

                <RadioButton
                    android:id="@+id/q2a3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q2a3"
                    android:textSize="16dp" />
            </RadioGroup>

            <TextView
                android:id="@+id/question3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryLight"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                android:text="@string/q3"
                android:textAllCaps="false"
                android:textSize="16dp" />

            <RadioGroup
                android:id="@+id/q3radiobox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <RadioButton
                    android:id="@+id/q3a1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q3a1"
                    android:textSize="16dp" />

                <RadioButton
                    android:id="@+id/q3a2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q3a2"
                    android:textSize="16dp" />

                <RadioButton
                    android:id="@+id/q3a3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q3a3"
                    android:textSize="16dp" />
            </RadioGroup>

            <TextView
                android:id="@+id/question4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryLight"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                android:text="@string/q4"
                android:textAllCaps="false"
                android:textSize="16dp" />

            <RadioGroup
                android:id="@+id/q4radiobox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <RadioButton
                    android:id="@+id/q4a1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q4a1"
                    android:textSize="16dp" />

                <RadioButton
                    android:id="@+id/q4a2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q4a2"
                    android:textSize="16dp" />

                <RadioButton
                    android:id="@+id/q4a3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q4a3"
                    android:textSize="16dp" />
            </RadioGroup>

            <TextView
                android:id="@+id/question5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryLight"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                android:text="@string/q5"
                android:textAllCaps="false"
                android:textSize="16dp" />

            <RadioGroup
                android:id="@+id/q5radiobox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <RadioButton
                    android:id="@+id/q5a1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q5a1"
                    android:textSize="16dp" />

                <RadioButton
                    android:id="@+id/q5a2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q5a2"
                    android:textSize="16dp" />

                <RadioButton
                    android:id="@+id/q5a3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q5a3"
                    android:textSize="16dp" />
            </RadioGroup>


            <TextView
                android:id="@+id/question6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryLight"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                android:text="@string/q6"
                android:textAllCaps="false"
                android:textSize="16dp" />

            <RadioGroup
                android:id="@+id/q6radiobox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <RadioButton
                    android:id="@+id/q6a1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q6a1"
                    android:textSize="16dp" />

                <RadioButton
                    android:id="@+id/q6a2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q6a2"
                    android:textSize="16dp" />

                <RadioButton
                    android:id="@+id/q6a3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q6a3"
                    android:textSize="16dp" />
            </RadioGroup>

            <TextView
                android:id="@+id/question7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryLight"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                android:text="@string/q7"
                android:textAllCaps="false"
                android:textSize="16dp" />

            <RadioGroup
                android:id="@+id/q7radiobox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <RadioButton
                    android:id="@+id/q7a1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q7a1"
                    android:textSize="16dp" />

                <RadioButton
                    android:id="@+id/q7a2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q7a2"
                    android:textSize="16dp" />

                <RadioButton
                    android:id="@+id/q7a3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q7a3"
                    android:textSize="16dp" />
            </RadioGroup>

            <TextView
                android:id="@+id/question8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryLight"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                android:text="@string/q8"
                android:textAllCaps="false"
                android:textSize="16dp" />

            <RadioGroup
                android:id="@+id/q8radiobox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <RadioButton
                    android:id="@+id/q8a1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q8a1"
                    android:textSize="16dp" />

                <RadioButton
                    android:id="@+id/q8a2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q8a2"
                    android:textSize="16dp" />

                <RadioButton
                    android:id="@+id/q8a3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q8a3"
                    android:textSize="16dp" />
            </RadioGroup>

            <TextView
                android:id="@+id/question9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryLight"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                android:text="@string/q9"
                android:textAllCaps="false"
                android:textSize="16dp" />

            <RadioGroup
                android:id="@+id/q9radiobox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <RadioButton
                    android:id="@+id/q9a1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q9a1"
                    android:textSize="16dp" />

                <RadioButton
                    android:id="@+id/q9a2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q9a2"
                    android:textSize="16dp" />

                <RadioButton
                    android:id="@+id/q9a3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q9a3"
                    android:textSize="16dp" />
            </RadioGroup>

            <TextView
                android:id="@+id/question10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@color/colorPrimaryLight"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                android:text="@string/q10"
                android:textAllCaps="false"
                android:textSize="16dp" />

            <CheckBox
                android:id="@+id/q10a1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/q10a1"
                android:textSize="16dp" />

            <CheckBox
                android:id="@+id/q10a2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/q10a2"
                android:textSize="16dp" />

            <CheckBox
                android:id="@+id/q10a3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/q10a3"
                android:textSize="16dp" />

            <CheckBox
                android:id="@+id/q10a4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/q10a4"
                android:textSize="16dp" />

            <CheckBox
                android:id="@+id/q10a5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/q10a5"
                android:textSize="16dp" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="32dp"
                android:layout_marginTop="32dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@color/colorPrimaryDark"
                    android:onClick="submitAnswer"
                    android:text="@string/btn_result"
                    android:textColor="#fff" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>
